feat: Phase 1 GZD grid layer with mgrs-js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mgrs</title>
+    <!-- js_cols library expects a global js_cols object to already exist -->
+    <script>window.js_cols = {};</script>
   </head>
   <body>
     <div id="root"></div>
